# svs-core

./: .env.ci  .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-config.yml  .prettierrc  .release-please-manifest.json  404.html  AGENTS.md  ATTRIBUTIONS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  alembic.ini  cli.md.template  codecov.yml  compile-cli.py  compile-fancy-docs.sh  conftest.py  django_piss.txt  force_schema.py  index.html  install-dev.sh  install.sh  macros.py  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  pytest.ini  release-please-config-web.json  release-please-config.json  requirements.txt  review.json  service_templates  sitemap.xml  zadani.md
.devcontainer/: .env.example  Dockerfile  configure-user-remap.sh  devcontainer-lock.json  devcontainer.json  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  fix-docker.sh  install-typst.sh
.devcontainer/pg-init/: init-test-db.sh
.github/: DOCS_PREVIEW_SETUP.md  copilot-instructions.md  dependabot.yml
.github/extra/: .env.ci  docker-compose.yml  release‑please‑config.json
.github/workflows/: copilot-setup-steps.yml  create-pipx-install-message.yml  deploy-docs.yml  docs-preview.yml  opencode.yml  publish-docs.yml  publish-sandbox.yml  publish.yml  release-please-core.yml  release-please-web.yml  release-please.yml  test-release.yml  test.yml
alembic/: env.py
alembic/versions/: 3beb73b04313_add_ssh_keys.py  830e86549ec6_initial_migration.py  f53d9df2b1bb_create_basic_user.py  f8bb6dfb48bc_add_mixins_ssh_key_contents.py
api/: index.html
api-reference/: index.html
api-reference/constructable/: index.html
api-reference/ssh-key/: index.html
api-reference/user/: index.html
api/docker/: index.html
api/internal/docker/: index.html
api/internal/models/: index.html
api/service/: index.html
api/template/: index.html
api/user/: index.html
api/users/: index.html
chagelog/: index.html
cli/: index.html
docs/: base.md  cli.md  cli.md.template  cli_importer.py  compile-cli.py  index.md  paper.md  tui-architecture.md  users.md
docs/api/: docker.md  index.md  user.md  users.md
docs/api-reference/: changelog.md  constructable.md  git-source.md  index.md  service.md  ssh-key.md  template.md  user.md
docs/guides/: adminer.md  common-steps.md  index.md  mysql.md  nginx.md
docs/setup/: hello-world.md  index.md  quickstart.md  sandbox.md  web.md
fancy-docs/: compile-mp.sh  iso690-numeric-brackets-cs.csl  main.bib  main.typ  poster.typ  zadani.typ
paper/: index.html
sandbox-env/: Dockerfile  Dockerfile.local  docker-compose.local.yml  docker-compose.template.yml  docker-compose.yml  entrypoint.sh
scripts/: install.sh  update.sh
search/: search_index.json
service_templates/: adminer.json  django.Dockerfile  django.json  mysql.json  nginx.Dockerfile  nginx.json  php.json  postgres.json  python.Dockerfile  python.json  schema.json  svelte.Dockerfile  svelte.json
setup/: index.html
setup/hello-world/: index.html
setup/quickstart/: index.html
svs_core/: __main__.py  apps.py  models.py
svs_core/cli/: app.py  destroy.py  init.py  lib.py  main.py  runtime.py  service.py  setup.py  state.py  template.py  user.py  utils.py  web.py
svs_core/db/: client.py  constructable.py  force-schema.py  lifecycle.py  manage.py  models.py  settings.py
svs_core/docker/: base.py  container.py  image.py  json_properties.py  network.py  service.py  template.py
svs_core/event_adapters/: base.py  db.py  system.py
svs_core/exceptions/: base.py  user.py
svs_core/migrations/: migrator.py
svs_core/shared/: base.py  env_manager.py  exceptions.py  git_source.py  github.py  hash.py  http.py  logger.py  ports.py  shell.py  volumes.py
svs_core/users/: manager.py  ssh_key.py  system.py  user.py
tests/: conftest.py
tests/bases/: db.py
tests/cli/: cli_lib_test.py  cli_main_test.py  cli_service_test.py  cli_state_test.py  cli_template_test.py  cli_user_test.py  cli_utils_test.py  destroy_test.py  init_test.py  template_test.py  web_test.py
tests/db/: client_test.py
tests/event_adapters/: system_test.py
tests/integration/: conftest.py
tests/shared/: base_test.py  logger_test.py  shell_test.py  volumes_test.py
tests/users/: manager_test.py  system_test.py  user_test.py
web/: .env.example  .gitignore  CHANGELOG.md  README.md  dev.sh  input.css  manage.py  package-lock.json  package.json  requirements.txt  update.sh
web/app/: apps.py  urls.py  views.py
web/frontend/: package-lock.json  package.json  vite.config.js
web/project/: asgi.py  settings.py  urls.py  wsgi.py
web/web/: settings.py  urls.py
(+151 files in other folders)
