[project]
name = "svs_core"
version = "0.1.0"
description = "Core library for SVS"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
packages = ["svs_core"]

[tool.ruff]
line-length = 88
target-version = "py311"
ignore = ["E712"]

[tool.ruff.isort]
known-first-party = ["svs_core"]
known-third-party = ["pytest"]
combine-as-imports = true
force-sort-within-sections = false
lines-between-types = 1
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.aerich]
tortoise_orm = "svs_core.db.client.TORTOISE_ORM"
location = "./svs_core/db/migrations"
src_folder = "./svs_core"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
svs = "svs_core.__main__:main"
