[project]
name = "svs_core"
version = "0.14.3"
description = "Core library for SVS (https://svs.kristn.co.uk/)"
authors = [{ name = "Kristián Kunc", email = "diist7i4c@mozmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "bcrypt==5.0.0",
    "docker==7.1.0",
    "httpx==0.28.1",
    "typer==0.24.1",
    "Django==6.0.4",
    "dj_database_url==3.1.2",
    "psycopg[binary]==3.3.3",
]

[project.urls]
Homepage = "https://svs.kristn.co.uk"
Repository = "https://github.com/kristiankunc/svs-core"
Issues = "https://github.com/kristiankunc/svs-core/issues"
Changelog = "https://github.com/kristiankunc/svs-core/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "black==26.3.1",
    "isort==8.0.1",
    "mypy==1.20.0",
    "pre-commit==4.5.1",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "pytest-dotenv==0.5.2",
    "pytest_mock==3.15.1",
    "ruff==0.15.10",
    "twine==6.2.0",
    "pytest-django==4.12.0",
    "pytest-xdist==3.8.0",
]
docs = [
    "zensical==0.0.32",
    "mkdocstrings[python]==1.0.3",
    "mkdocs-awesome-nav==3.3.0",
    "mkdocs-pdf==0.1.2",
]

[project.scripts]
svs = "svs_core.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
include = ["svs_core", "svs_core.*"]

[tool.setuptools.package-data]
svs_core = ["**/*"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["D"]
ignore = ["D417", "D100", "D105", "D107", "D104", "D202"]
per-file-ignores = { "tests/**" = [
    "D",
], "web/**" = [
    "D",
], "svs_core/db/migrations/**" = [
    "ALL",
] }

[tool.ruff.format]
docstring-code-format = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 88
target-version = ["py311"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.djlint]
ignore = "H021"
